fix(ui): improve light theme contrast and fix text visibility and theme change apply

--- a/src/renderer/styles/index.css
+++ b/src/renderer/styles/index.css
@@ -8,8 +8,6 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,13 +16,20 @@
 }
 
 body {
+  /* Tailwind의 기본값을 명시적으로 설정하여 가독성 문제 해결 시도 */
+  @apply text-gray-900 bg-white; 
   margin: 0;
   display: flex;
   min-width: 320px;
   min-height: 100vh;
 }
 
+html.dark body {
+   /* Tailwind의 기본값을 명시적으로 설정하여 가독성 문제 해결 시도 */
+  @apply text-gray-100 bg-gray-900;
+}
+
 #root {
   width: 100%;
   height: 100vh;
-} 
+}
